--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: The Brain Body Dynamics Lab
+email: valero@usc.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Brain Body Dynamics Laboratory of the University of Southern California. Principal Investigator: Francisco Valero-Cuevas
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://valerolab.org" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
