converted highlighter to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,4 @@ url: "http://valerolab.org" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
