--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: valero@usc.edu
 description: > # this means to ignore newlines until "baseurl:"
   ValeroLab
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://valerolab.org" # the base hostname & protocol for your site
+url: "https://valerolab.org" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
